Fixed up spacing on media control div so that volume is closer to right side of screen

--- a/frontend/src/components/Tracks/TrackIdPage.css
+++ b/frontend/src/components/Tracks/TrackIdPage.css
@@ -37,7 +37,7 @@
     height: 20vh;
     width: 100vw;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -78,5 +78,5 @@
 }
 
 .volume-ctn {
-    justify-content: flex-end;
+    justify-content: center;
 }
